# fractex

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  pypi.yaml
fractex/: 3d.py  __init__.py  advanced.py  cli.py  core.py  dynamic_textures_3d.py  geometric_patterns_3d.py  interactive.py  simplex_noise.py  texture_blending.py  volume_scattering.py  volume_textures.py
fractex/examples/: 3d.py  3d_integration.py  3d_integration_2d.py  __init__.py  _output.py  architecture_pattern.py  atmosphere.py  composite_material.py  crystal_cave.py  custom_pattern.py  fire_flame.py  game_integration.py  game_texture.py  integration.py  physic_integration.py  splash.py  terrain.py  underwater.py  underwater_volkano.py
