[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fractex"
version = "0.2.1"
description = "Fractal texture engine for procedural and infinite-detail textures."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Timur Isanov", email = "tisanov@yahoo.com" }]
dependencies = ["numpy", "numba", "matplotlib"]
keywords = ["fractal", "texture", "procedural", "noise"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/xtimon/fractex.git"

[project.scripts]
fractex = "fractex.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["fractex*"]

[tool.setuptools.package-data]
fractex = ["examples/*.py"]
